# bluecrossbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-admin-frontend  Dockerfile-backend  Dockerfile-frontend  Dockerfile-upload-frontend  deploy-admin-frontend.sh  deploy-backend.sh  deploy-frontend.sh  deploy-upload-frontend.sh  deploy.sh  docker-compose-admin-frontend.yml  docker-compose-backend.yml  docker-compose-frontend.yml  docker-compose-upload-frontend.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  server.py  server_run.py
backend/src/: __init__.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/models/: __init__.py  admin.py  chat.py  common.py  config.py  feedback.py  ingestion.py  product.py  retrieval.py  vectors.py  video.py
backend/src/api/routes/: __init__.py  admin.py  chat.py  config.py  feedback.py  health.py  ingestion.py  product.py  retrieval.py  vectors.py  video.py
backend/src/core/: __init__.py  config.py
backend/src/core/logging/: setup.py
backend/src/core/mongo/: __init__.py  client.py
backend/src/core/vector_db/: __init__.py  client.py
backend/src/services/: __init__.py
backend/src/services/admin/: service.py
backend/src/services/chat/: __init__.py  service.py
backend/src/services/chunking/: __init__.py  service.py
backend/src/services/config/: service.py
backend/src/services/embedding/: __init__.py  base.py  errors.py  openai_provider.py  sparse_provider.py
backend/src/storage/: __init__.py
backend/src/utils/: ids.py  passwords.py  text.py
(+183 files in other folders)
